layout/fix special spacing
This will fix that the special attributes are not spaced as the rest of the attributes.
'Fixes #1000'

--- a/src/css/actor.scss
+++ b/src/css/actor.scss
@@ -30,7 +30,7 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         &.center {
-            justify-content: center;
+            justify-content: space-evenly;
         }
         &.no-border {
             border-top: none;
